fix word wrap

--- a/frontend/stylus/style.styl
+++ b/frontend/stylus/style.styl
@@ -8,8 +8,8 @@
 
 
 body
-  word-wrap: normal;
-  overflow-wrap: normal;
+  word-wrap: normal!important;
+  overflow-wrap: normal!important;
 .flex
   display flex
 .container
